--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "html-and-css(3)",
   "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,3 +13,4 @@
     "parcel-bundler": "^1.12.5"
   }
 }
+
